# darknet

./: .gitignore  CMakeLists.txt  package.xml  setup.py
include/: darknet.h
python/darknet_ros/: darknet.py
